@@ -1,7 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2011-2012, John Haddon. All rights reserved.
-#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -44,7 +44,10 @@ class gui( Gaffer.Application ) :
 
 	def __init__( self ) :
 	
-		Gaffer.Application.__init__( self )
+		Gaffer.Application.__init__(
+			self,
+			"This application provides a graphical user interface for editing node graphs."
+		)
 		
 		self.parameters().addParameters(
 		
